# tauri-dialog-rs

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
tauri-dialog-sys/: Cargo.toml  README.md  build.rs
tauri-dialog-sys/src/: lib.rs
