[package]
name = "tauri-dialog"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas@tauri.studio>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/tauri-apps/tauri-dialog-rs"
description = "Native message dialogs library"

[dependencies]
tauri-dialog-sys = { path = "./tauri-dialog-sys", version = "0.1" }