[package]
name = "tauri-dialog-sys"
version = "0.1.1"
authors = ["Lucas Nogueira <lucas@tauri.studio>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/tauri-apps/tauri-dialog-rs"
description = "This crate is no longer maintained."

[badges]
maintenance = { status = "deprecated" }

[build-dependencies]
cc = "1"
pkg-config = "0.3"
